--- a/css/style.css
+++ b/css/style.css
@@ -117,7 +117,7 @@
 }
 
 
-@media screen and (max-width:360px) {
+@media screen and (min-width:360px) {
     
     .card{
         flex-direction: column;
